Fix dropdown arrow overlapping text [WEB-2018]

--- a/frontend/scss/atoms/_dropdown.scss
+++ b/frontend/scss/atoms/_dropdown.scss
@@ -136,10 +136,11 @@ Demonstrated in **statics/toybox**
 }
 
 .dropdown__trigger > .icon--arrow {
-  position: absolute;
-  right: 16px;
-  top: 50%;
-  margin-top: -8px;
+  // position: absolute;
+  // right: 16px;
+  // top: 50%;
+  margin-top: -3px;
+  margin-left: 5px;
   transform: rotate(90deg);
   transform-origin: 8px 8px;
 }
@@ -333,5 +334,5 @@ Demonstrated in **statics/toybox**
 }
 
 .dropdown--filter .dropdown__trigger > .icon--arrow {
-  right: 0;
+  // right: 0;
 }
